* Fix - Small adjust on post archive - post item footer style
* Fix - Fixed post author when 'get_the_author' is not available
* Fix - Fixed breadcrumb display position on archive.php, author.php and search.php
* Fix - Small issue (style) with Pagenavi pagination
* Fix - Fixed CSS enqueue (parent > child themes)

### 1.8.4
* Fix - Re-added the get_comments_number() fix

### 1.8.3
* Fix - Removed custom image classes from avatar in admin bar
* Fix - Top menu dropdown in large screens (first level link didn’t works)
* Fix - Moved the get_comments_number() out of the empty() statement, causing a Fatal PHP Error

### 1.8.2
* Fix - Enabled compatibility between LSX Banners (Soliloquy) and LSX Theme
* Fix - Enabled compatibility between LSX Blog Customiser (categories BS carousel) and LSX Theme
* Fix - Enabled compatibility between LSX Blog Customiser (display full content on blog pages) and LSX Theme
* Fix - Enabled compatibility between LSX Blog Customiser (display grid layout on blog pages) and LSX Theme
* Fix - Added a JavaScript option to avoid hide top menu on scroll
* Fix - Adjusted the next/previous post navigation (wider columns)
* Fix - Adjusted comment author thumbnail display

### 1.8.1
* Fix - Avoided use a return function inside the PHP function "empty" (compatibility with PHP 5.5 and lower)
* Fix - Compatibility with WPML 3.6
* Fix - Fixed Sensei redirect for lessons archive
* Feature - Starter content (new feature available in WordPress 4.7)

### 1.8.0
* Made LSX compatible (visual) with Ninja Forms
* Made LSX compatible with LSX Blog Customizer (plugin)
* Made LSX compatible (visual) with LSX Banners new feature: background videos
* Spinning preloader: added an option to enable/disable it in WP Customizer
* Customizer Colors: fixed/implemented several CSS/SASS selectors
* Main menu: made highlight items use button CTA colours
* Main menu: small caret style fix for wider menu items
* Main menu: float to right always the last menu item with dropdown