@@ -765,225 +765,3 @@
 	padding: 20px 0;
 	border-top: 1px solid #ddd;
 }
-
-
-// ---------- Archives (blog, year, month, day, tag, category, author, search) ----------
-
-
-body.blog,
-body.archive.date,
-body.archive.tag,
-body.archive.category,
-body.archive.author,
-body.archive.tax-post_format,
-body.search {
-	.wrap {
-		#primary {
-			&.col-sm-12 {
-				max-width: 768px;
-			}
-
-			#main > article,
-			#main > .infinite-wrap > article {
-				@extend %module-single-box;
-
-				header.entry-header {
-					h1.entry-title {
-						@extend %module-single-title;
-						@extend %module-single-title-box;
-					}
-
-					.entry-image {
-						.thumbnail {
-							img {
-								width: 100%;
-							}
-						}
-					}
-				}
-
-				&.post_format-post-format-quote {
-					header.entry-header {
-						h1.entry-title {
-							@extend %module-single-title_quote;
-						}
-					}
-				}
-
-				.entry-meta {
-					@extend %module-single-meta;
-					@extend %module-single-meta-box;
-				}
-
-				.entry-summary,
-				.entry-content {
-					@extend %module-single-text;
-					@extend %module-single-text-box;
-				}
-
-				&.post_format-post-format-quote {
-					.entry-summary,
-					.entry-content {
-						@extend %module-single-text-quote;
-					}
-				}
-
-				.post-tags-wrapper {
-					@extend %module-single-footer_archive;
-				}
-
-				.lsx-breaker,
-				.edit-link {
-					display: none;
-				}
-			}
-
-			.wp-pagenavi-wrapper {
-				@extend %module-pagenavi;
-			}
-		}
-	}
-}
-
-
-// ---------- Single (post, team) ----------
-
-
-body.single-post {
-	.wrap {
-		#primary {
-			&.col-sm-12 {
-				max-width: 768px;
-			}
-
-			#main > article,
-			#main > .infinite-wrap > article {
-				@extend %module-single-no-box;
-
-				header.single-header {
-					h1.single-title {
-						@extend %module-single-title;
-					}
-				}
-
-				&.post_format-post-format-quote {
-					header.single-header {
-						h1.single-title {
-							@extend %module-single-title_quote;
-						}
-					}
-				}
-
-				.entry-meta {
-					@extend %module-single-meta;
-				}
-
-				.entry-content {
-					@extend %module-single-text;
-				}
-
-				&.post_format-post-format-quote {
-					.entry-content {
-						@extend %module-single-text-quote;
-					}
-				}
-
-				.post-tags-wrapper {
-					@extend %module-single-footer_single;
-				}
-
-				.post-meta-link {
-					@extend %module-single-comments-cta;
-				}
-
-				#comments-collapse {
-					#comments {
-						@extend %module-single-comments-list;
-					}
-
-					#respond {
-						@extend %module-single-comments-form;
-					}
-
-					#comments #respond ,
-					#comments + #respond {
-						@extend %module-single-comments-form-after-comments;
-					}
-				}
-
-				footer.entry-meta {
-					display: none;
-				}
-
-				#jp-relatedposts {
-					@extend %module-single-related-posts;
-				}
-			}
-
-			.post-navigation {
-				@extend %module-single-post-navigation;
-			}
-		}
-	}
-}
-
-
-// ---------- Single (other) ----------
-
-
-body.single:not(.single-post) {
-	.wrap {
-		#primary {
-			#main > article,
-			#main > .infinite-wrap > article {
-				@extend %module-single-no-box;
-
-				.entry-content {
-					@extend %module-single-text;
-				}
-
-				&.post_format-post-format-quote {
-					.entry-content {
-						@extend %module-single-text-quote;
-					}
-				}
-
-				.edit-link {
-					display: none;
-				}
-			}
-		}
-	}
-}
-
-
-// ---------- Single (page) ----------
-
-
-body.page {
-	.wrap {
-		#primary {
-			#main > article,
-			#main > .infinite-wrap > article {
-				.entry-content {
-					@extend %module-single-text;
-				}
-
-				.edit-link {
-					display: none;
-				}
-			}
-		}
-	}
-}
-
-
-// ---------- Sharing ----------
-
-
-#sharing_email {
-	@media only screen and (max-width: 767px) {
-		left: 1% !important;
-		width: 98% !important;
-	}
-}
