@@ -12,6 +12,7 @@
 @import "forms";
 @import "sidebar";
 @import "buddypress";
-@import "blog_v2";
+@import "blog_v2_placeholders";
+@import "blog_v2_styles";
 @import "loading";
 @import "lazyload";
