@@ -9,6 +9,8 @@
 * Fix - Fixed breadcrumb display position on archive.php, author.php and search.php
 * Fix - Small issue (style) with Pagenavi pagination
 * Fix - Fixed CSS enqueue (parent > child themes)
+* Fix - Removed remove_filter: the_excerpt/wpautop
+* Fix - Small Sass files change (wiyhout affect CSS)
 
 ### 1.8.4
 * Fix - Re-added the get_comments_number() fix
